@@ -2,13 +2,14 @@ Version 4.1
 
 Bug Fixes:
 Fixed a bug with the info button to support displaying object information for S3-compatible cloud providers.
-Daemon mode now only syncs to S3. 
+Daemon mode now only syncs to S3 to avoid having duplicate files.
  
 Improvements:
 Performance Testing: Graph and non-graph display are labeled as PUT or GET.
 Versioning: Latest file will be in blue. Deleted files will be in red.
 Versioning: Version enabled buckets will be displayed in green.
 Upgraded S3 API to 1.9.3
+GUI creates buckets in a background thread to be more responsive.
 
 New Features:
 Command-line interface: put, get, delete, makebucket, rmbucket, listbuckets, syncfroms3, and synctos3.
